--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,18 @@ attrs==25.3.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
+distro==1.9.0
 dnspython==2.7.0
 exceptiongroup==1.2.2
 fastapi==0.115.12
 frozenlist==1.6.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+jiter==0.10.0
 multidict==6.4.3
+openai==1.96.1
 propcache==0.3.1
 pydantic==2.11.4
 pydantic_core==2.33.2
@@ -24,6 +29,7 @@ redis==6.0.0
 requests==2.32.3
 sniffio==1.3.1
 starlette==0.46.2
+tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
