--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
-async-timeout==5.0.1
+async-timeout==4.0.3
 attrs==25.3.0
+backoff==2.2.1
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
@@ -13,25 +14,62 @@ dnspython==2.7.0
 exceptiongroup==1.2.2
 fastapi==0.115.12
 frozenlist==1.6.0
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+importlib_metadata==8.7.0
 jiter==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-core==0.3.72
+langchain-openai==0.3.28
+langchain-text-splitters==0.3.9
+langfuse==3.2.2
+langgraph==0.6.3
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.6.3
+langgraph-sdk==0.2.0
+langsmith==0.4.13
 multidict==6.4.3
-openai==1.96.1
+openai==1.99.1
+opentelemetry-api==1.36.0
+opentelemetry-exporter-otlp==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+opentelemetry-exporter-otlp-proto-http==1.36.0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
+orjson==3.11.1
+ormsgpack==1.10.0
+packaging==25.0
 propcache==0.3.1
+protobuf==6.31.1
 pydantic==2.11.4
 pydantic_core==2.33.2
 pymongo==4.12.1
 python-dotenv==1.1.0
+PyYAML==6.0.2
 redis==6.0.0
+regex==2025.7.34
 requests==2.32.3
+requests-toolbelt==1.0.0
 sniffio==1.3.1
+SQLAlchemy==2.0.42
 starlette==0.46.2
+tenacity==9.1.2
+tiktoken==0.10.0
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 uvicorn==0.34.2
+wrapt==1.17.2
+xxhash==3.5.0
 yarl==1.20.0
+zipp==3.23.0
+zstandard==0.23.0
